@@ -13,6 +13,7 @@ This release includes the following changes:
  o added --metalink for metalink download support
  o pop3: Added support for sasl ntlm authentication
  o pop3: Added support for sasl plain text authentication
+ o pop3: Added support for sasl cram-md5 authentication
 
 This release includes the following bugfixes:
 
